[gd_scene load_steps=24 format=2]

[ext_resource path="res://levels/level_tucas/player/player_tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/world.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level_tucas/poweups/jumpPowerUp.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/level_tucas/enemies/tucas_enemy_moving.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/level_tucas/level_tucas.gd" type="Script" id=5]
[ext_resource path="res://pickables/pickups.tscn" type="PackedScene" id=6]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/level_tucas/assets/audios/jaique_fuma.mp3" type="AudioStream" id=8]
[ext_resource path="res://HUD/winLoseHandler.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/level_tucas/assets/escenario/ascenso.tscn" type="PackedScene" id=10]
[ext_resource path="res://levels/level_tucas/assets/escenario/cochVuelta.tscn" type="PackedScene" id=11]
[ext_resource path="res://levels/level_tucas/RemoteTransform2D.gd" type="Script" id=12]
[ext_resource path="res://assets/pngs/pickables/tuca/tuca-right.png" type="Texture" id=13]
[ext_resource path="res://assets/font/EmilysCandy-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://levels/level_tucas/deathPlatforms.gd" type="Script" id=15]
[ext_resource path="res://levels/level_tucas/HUD/HUD_tucas.gd" type="Script" id=16]
[ext_resource path="res://assets/environment/layers/NewSuperMarioBros2-World1-1.png" type="Texture" id=17]
[ext_resource path="res://assets/pngs/elementos/coin.png" type="Texture" id=18]
[ext_resource path="res://levels/level_tucas/assets/audios/tucas_background.mp3" type="AudioStream" id=19]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 152.812, 12.5501 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 36.9668 )

[node name="level_tucas" type="Node2D"]
script = ExtResource( 5 )

[node name="HUD2" parent="." instance=ExtResource( 7 )]
script = ExtResource( 16 )

[node name="Control" parent="HUD2" index="0"]
margin_left = 68.9684
margin_top = 103.705
margin_right = 68.9684
margin_bottom = 100.705

[node name="lifeCountLabel" parent="HUD2/Control/MarginContainer/HBox1/Hbox2/lifeRect" index="0"]
text = ""

[node name="TextureRect" type="TextureRect" parent="HUD2"]
margin_left = 64.0966
margin_top = -3.85266
margin_right = 106.096
margin_bottom = 43.1474
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tucaCount" type="Label" parent="HUD2/TextureRect"]
margin_left = 25.1567
margin_top = 15.2973
margin_right = 90.1567
margin_bottom = 54.2973
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TextureRect2" type="TextureRect" parent="HUD2"]
margin_left = 207.228
margin_top = 9.64987
margin_right = 251.228
margin_bottom = 50.6499
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinCount" type="Label" parent="HUD2/TextureRect2"]
margin_left = -9.80564
margin_top = 1.52429
margin_right = 55.1944
margin_bottom = 40.5243
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="winLoseHandler" parent="." instance=ExtResource( 9 )]

[node name="player_tile" parent="." instance=ExtResource( 1 )]
position = Vector2( 308.275, 678.195 )
jump_speed = -320
gravity = 750
life = 3

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="player_tile"]
remote_path = NodePath("../../Camera2D")
script = ExtResource( 12 )

[node name="World" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 1114224, 2, 0, 1114225, 2, 2, 1114411, 2, 196608, 1114412, 2, 196609, 1114413, 2, 196609, 1114414, 2, 196609, 1114415, 2, 196610, 1179760, 2, 131072, 1179761, 2, 131074, 1376552, 2, 196608, 1376553, 2, 196609, 1376554, 2, 196609, 1376555, 2, 196609, 1376556, 2, 196609, 1376557, 2, 196609, 1376558, 2, 196609, 1376559, 2, 196609, 1376560, 2, 196609, 1376561, 2, 196609, 1376562, 2, 196609, 1376563, 2, 196610, 1376569, 2, 196611, 1441905, 2, 0, 1441906, 2, 1, 1441907, 2, 1, 1441908, 2, 1, 1441909, 2, 1, 1441910, 2, 1, 1441911, 2, 1, 1441912, 2, 1, 1441913, 2, 1, 1441914, 2, 1, 1441915, 2, 1, 1441916, 2, 1, 1441917, 2, 2, 1507441, 2, 131072, 1507442, 2, 131073, 1507443, 2, 131073, 1507444, 2, 131073, 1507445, 2, 131073, 1507446, 2, 131073, 1507447, 2, 131073, 1507448, 2, 131073, 1507449, 2, 131073, 1507450, 2, 131073, 1507451, 2, 131073, 1507452, 2, 131073, 1507453, 2, 131074, 1507597, 2, 3, 1573133, 2, 65539, 1573179, 2, 196611, 1638666, 2, 196608, 1638667, 2, 196609, 1638668, 2, 196609, 1638669, 2, 262151, 1704205, 2, 65539, 1769741, 2, 65539, 1769785, 2, 196611, 1835272, 2, 196608, 1835273, 2, 196609, 1835274, 2, 196609, 1835275, 2, 196609, 1835276, 2, 196609, 1835277, 2, 262151, 1900813, 2, 65539, 2031615, 2, 3, 1966299, 2, 3, 1966304, 2, 3, 1966349, 2, 65539, 1966395, 2, 196611, 2097151, 2, 65539, 2031746, 2, 196611, 2031835, 2, 65539, 2031840, 2, 65539, 2031878, 2, 196608, 2031879, 2, 196609, 2031880, 2, 196609, 2031881, 2, 196609, 2031882, 2, 196609, 2031883, 2, 196609, 2031884, 2, 196609, 2031885, 2, 196615, 2162687, 2, 65539, 2097371, 2, 196612, 2097372, 2, 196609, 2097373, 2, 196609, 2097374, 2, 196609, 2097375, 2, 196609, 2097376, 2, 196615, 2228223, 2, 65539, 2162782, 2, 196608, 2162783, 2, 196609, 2162784, 2, 196609, 2162785, 2, 196609, 2162786, 2, 196610, 2163000, 2, 196608, 2163001, 2, 196610, 2293759, 2, 65539, 2228429, 2, 0, 2228430, 2, 2, 2228478, 2, 0, 2228479, 2, 2, 2359295, 2, 65539, 2293805, 2, 196608, 2293806, 2, 196609, 2293807, 2, 196610, 2293965, 2, 65536, 2293966, 2, 65538, 2294014, 2, 65536, 2294015, 2, 65538, 2424730, 2, 4, 2424731, 2, 196609, 2424732, 2, 196609, 2424733, 2, 196609, 2424734, 2, 7, 2424831, 2, 65539, 2359370, 2, 196608, 2359371, 2, 196609, 2359372, 2, 196610, 2359390, 2, 196608, 2359391, 2, 196609, 2359392, 2, 196609, 2359393, 2, 196609, 2359394, 2, 196610, 2359422, 2, 196608, 2359423, 2, 196609, 2359424, 2, 196609, 2359425, 2, 196609, 2359426, 2, 196609, 2359427, 2, 196609, 2359428, 2, 196609, 2359429, 2, 196609, 2359430, 2, 196609, 2359431, 2, 196610, 2359501, 2, 65536, 2359502, 2, 65538, 2359550, 2, 65536, 2359551, 2, 65538, 2359605, 2, 196608, 2359606, 2, 196610, 2490265, 2, 4, 2490266, 2, 196615, 2490270, 2, 196612, 2490271, 2, 7, 2490367, 2, 65539, 2425037, 2, 65536, 2425038, 2, 65538, 2425069, 2, 3, 2425076, 2, 3, 2425086, 2, 65536, 2425087, 2, 131077, 2425088, 2, 5, 2425089, 2, 196609, 2425090, 2, 7, 2555801, 2, 65539, 2555807, 2, 65539, 2555903, 2, 65539, 2490573, 2, 65540, 2490574, 2, 196613, 2490575, 2, 7, 2490605, 2, 196612, 2490606, 2, 196609, 2490607, 2, 196609, 2490608, 2, 196609, 2490609, 2, 196609, 2490610, 2, 196609, 2490611, 2, 196609, 2490612, 2, 262151, 2490621, 2, 4, 2490622, 2, 196614, 2490623, 2, 65542, 2490624, 2, 65538, 2490626, 2, 65539, 2621337, 2, 65539, 2621343, 2, 65539, 2621439, 2, 65539, 2555936, 2, 4, 2555937, 2, 196609, 2555938, 2, 196609, 2555939, 2, 196609, 2555940, 2, 196609, 2555941, 2, 196609, 2555942, 2, 196609, 2555943, 2, 196609, 2555944, 2, 196609, 2555945, 2, 7, 2555983, 2, 0, 2555984, 2, 1, 2555985, 2, 1, 2555986, 2, 2, 2555998, 2, 196608, 2555999, 2, 196609, 2556000, 2, 196609, 2556001, 2, 196609, 2556002, 2, 196610, 2556011, 2, 3, 2556033, 2, 196608, 2556034, 2, 196609, 2556035, 2, 196610, 2556040, 2, 196608, 2556041, 2, 196609, 2556042, 2, 196609, 2556043, 2, 196610, 2556107, 2, 4, 2556108, 2, 196609, 2556109, 2, 196615, 2556111, 2, 65539, 2556148, 2, 65539, 2556157, 2, 65539, 2556159, 2, 65536, 2556160, 2, 65538, 2556162, 2, 65539, 2556175, 2, 196608, 2556176, 2, 196609, 2556177, 2, 196609, 2556178, 2, 196609, 2556179, 2, 196610, 2556198, 2, 196608, 2556199, 2, 196609, 2556200, 2, 196609, 2556201, 2, 196610, 2556210, 2, 196608, 2556211, 2, 196610, 2686873, 2, 65539, 2686879, 2, 65539, 2686975, 2, 65539, 2621472, 2, 65539, 2621481, 2, 65539, 2621493, 2, 196608, 2621494, 2, 196609, 2621495, 2, 196609, 2621496, 2, 196609, 2621497, 2, 196609, 2621498, 2, 196609, 2621499, 2, 196610, 2621519, 2, 65536, 2621520, 2, 65537, 2621521, 2, 65537, 2621522, 2, 65538, 2621547, 2, 65539, 2621550, 2, 3, 2621562, 2, 196608, 2621563, 2, 196609, 2621564, 2, 196609, 2621565, 2, 196610, 2621587, 2, 4, 2621588, 2, 196609, 2621589, 2, 196609, 2621590, 2, 196609, 2621591, 2, 7, 2621604, 2, 4, 2621605, 2, 196609, 2621606, 2, 196609, 2621607, 2, 196609, 2621608, 2, 196609, 2621609, 2, 196609, 2621610, 2, 196609, 2621611, 2, 196609, 2621612, 2, 196609, 2621613, 2, 196609, 2621614, 2, 196609, 2621615, 2, 196609, 2621616, 2, 196609, 2621617, 2, 196609, 2621618, 2, 196609, 2621619, 2, 196609, 2621620, 2, 196609, 2621621, 2, 196609, 2621622, 2, 196609, 2621623, 2, 196609, 2621624, 2, 196610, 2621643, 2, 65539, 2621647, 2, 196612, 2621648, 2, 7, 2621651, 2, 196608, 2621652, 2, 196609, 2621653, 2, 196609, 2621654, 2, 196609, 2621655, 2, 196610, 2621667, 2, 196608, 2621668, 2, 196609, 2621669, 2, 196609, 2621670, 2, 196609, 2621671, 2, 196609, 2621672, 2, 196610, 2621684, 2, 65539, 2621693, 2, 65539, 2621695, 2, 65536, 2621696, 2, 65538, 2621698, 2, 65539, 2621717, 2, 196608, 2621718, 2, 196609, 2621719, 2, 196609, 2621720, 2, 196609, 2621721, 2, 196609, 2621722, 2, 7, 2621727, 2, 4, 2621728, 2, 196609, 2621729, 2, 196609, 2621730, 2, 196609, 2621731, 2, 196609, 2621732, 2, 196609, 2621733, 2, 196610, 2621766, 2, 4, 2621767, 2, 196609, 2621768, 2, 196609, 2621769, 2, 196609, 2621770, 2, 196609, 2621771, 2, 196609, 2621772, 2, 7, 2752409, 2, 196612, 2752410, 2, 196609, 2752411, 2, 196609, 2752412, 2, 196609, 2752413, 2, 196609, 2752414, 2, 196609, 2752415, 2, 196615, 2752511, 2, 65539, 2687008, 2, 65539, 2687017, 2, 65539, 2687055, 2, 65536, 2687056, 2, 65537, 2687057, 2, 65537, 2687058, 2, 65538, 2687083, 2, 65539, 2687086, 2, 65539, 2687123, 2, 65539, 2687127, 2, 65539, 2687140, 2, 65539, 2687179, 2, 65539, 2687184, 2, 65539, 2687210, 2, 196608, 2687211, 2, 196609, 2687212, 2, 196609, 2687213, 2, 196609, 2687214, 2, 196609, 2687215, 2, 196609, 2687216, 2, 196609, 2687217, 2, 196609, 2687218, 2, 196609, 2687219, 2, 196609, 2687220, 2, 196616, 2687221, 2, 196609, 2687222, 2, 196610, 2687225, 2, 196608, 2687226, 2, 196609, 2687227, 2, 196609, 2687228, 2, 196609, 2687229, 2, 196616, 2687230, 2, 196609, 2687231, 2, 196614, 2687232, 2, 196613, 2687233, 2, 196609, 2687234, 2, 196616, 2687235, 2, 196609, 2687236, 2, 196609, 2687237, 2, 196609, 2687238, 2, 196609, 2687239, 2, 196609, 2687240, 2, 7, 2687258, 2, 196612, 2687259, 2, 196609, 2687260, 2, 196609, 2687261, 2, 196609, 2687262, 2, 196609, 2687263, 2, 196615, 2687302, 2, 65539, 2687308, 2, 65539, 2818047, 2, 65539, 2752544, 2, 65539, 2752553, 2, 65539, 2752591, 2, 65536, 2752592, 2, 65537, 2752593, 2, 65537, 2752594, 2, 65538, 2752619, 2, 65539, 2752622, 2, 65539, 2752644, 2, 0, 2752645, 2, 1, 2752646, 2, 1, 2752647, 2, 1, 2752648, 2, 1, 2752649, 2, 5, 2752650, 2, 196609, 2752651, 2, 196609, 2752652, 2, 196609, 2752653, 2, 196609, 2752654, 2, 196609, 2752655, 2, 196609, 2752656, 2, 196609, 2752657, 2, 196609, 2752658, 2, 196609, 2752659, 2, 196615, 2752663, 2, 65539, 2752676, 2, 65539, 2752696, 2, 196608, 2752697, 2, 196609, 2752698, 2, 196609, 2752699, 2, 196609, 2752700, 2, 196609, 2752701, 2, 196609, 2752702, 2, 196609, 2752703, 2, 196609, 2752704, 2, 196609, 2752705, 2, 196609, 2752706, 2, 196609, 2752707, 2, 196609, 2752708, 2, 196609, 2752709, 2, 196609, 2752710, 2, 196609, 2752711, 2, 196609, 2752712, 2, 196609, 2752713, 2, 196609, 2752714, 2, 196609, 2752715, 2, 196616, 2752716, 2, 196609, 2752717, 2, 196609, 2752718, 2, 196609, 2752719, 2, 196609, 2752720, 2, 196616, 2752721, 2, 196609, 2752722, 2, 196609, 2752723, 2, 196610, 2752776, 2, 196612, 2752777, 2, 196609, 2752778, 2, 196609, 2752779, 2, 196610, 2752813, 2, 196608, 2752814, 2, 196609, 2752815, 2, 196609, 2752816, 2, 196609, 2752817, 2, 196609, 2752818, 2, 196609, 2752819, 2, 196609, 2752820, 2, 196609, 2752821, 2, 196609, 2752822, 2, 196609, 2752823, 2, 196609, 2752824, 2, 196609, 2752825, 2, 196609, 2752826, 2, 196609, 2752827, 2, 196609, 2752828, 2, 196609, 2752829, 2, 196609, 2752830, 2, 196609, 2752831, 2, 7, 2752837, 2, 4, 2752838, 2, 196615, 2752844, 2, 196612, 2752845, 2, 196609, 2752846, 2, 6, 2752847, 2, 1, 2752848, 2, 1, 2752849, 2, 1, 2752850, 2, 1, 2752851, 2, 1, 2752852, 2, 1, 2752853, 2, 1, 2752854, 2, 5, 2752855, 2, 196609, 2752856, 2, 196609, 2752857, 2, 196609, 2752858, 2, 196609, 2752859, 2, 196609, 2752860, 2, 196609, 2752861, 2, 196609, 2752862, 2, 196609, 2752863, 2, 196609, 2752864, 2, 196609, 2752865, 2, 196609, 2752866, 2, 196609, 2752867, 2, 196609, 2752868, 2, 196609, 2752869, 2, 196609, 2752870, 2, 196609, 2752871, 2, 196610, 2883583, 2, 196612, 2818048, 2, 196609, 2818049, 2, 196609, 2818050, 2, 196609, 2818051, 2, 196609, 2818052, 2, 196609, 2818053, 2, 196609, 2818054, 2, 196609, 2818055, 2, 196609, 2818056, 2, 196609, 2818057, 2, 196609, 2818058, 2, 196609, 2818059, 2, 196609, 2818060, 2, 196609, 2818061, 2, 196609, 2818062, 2, 196609, 2818063, 2, 196609, 2818064, 2, 196609, 2818065, 2, 196609, 2818066, 2, 196609, 2818067, 2, 196609, 2818068, 2, 196609, 2818069, 2, 196609, 2818070, 2, 196609, 2818071, 2, 196609, 2818072, 2, 196609, 2818073, 2, 196609, 2818074, 2, 196609, 2818075, 2, 196609, 2818076, 2, 196609, 2818077, 2, 196609, 2818078, 2, 196609, 2818079, 2, 196609, 2818080, 2, 196616, 2818081, 2, 196609, 2818082, 2, 196609, 2818083, 2, 196609, 2818084, 2, 196609, 2818085, 2, 196609, 2818086, 2, 196609, 2818087, 2, 196609, 2818088, 2, 196609, 2818089, 2, 196616, 2818090, 2, 196609, 2818091, 2, 196609, 2818092, 2, 196609, 2818093, 2, 196609, 2818094, 2, 196609, 2818095, 2, 196609, 2818096, 2, 196609, 2818097, 2, 196609, 2818098, 2, 196609, 2818099, 2, 196609, 2818100, 2, 196609, 2818101, 2, 196609, 2818102, 2, 196609, 2818103, 2, 196609, 2818104, 2, 196609, 2818105, 2, 196609, 2818106, 2, 196609, 2818107, 2, 196609, 2818108, 2, 196609, 2818109, 2, 196609, 2818110, 2, 196609, 2818111, 2, 196609, 2818112, 2, 196610, 2818124, 2, 196608, 2818125, 2, 196609, 2818126, 2, 196609, 2818127, 2, 196614, 2818128, 2, 131073, 2818129, 2, 131073, 2818130, 2, 196613, 2818131, 2, 196609, 2818132, 2, 196609, 2818133, 2, 196609, 2818134, 2, 196609, 2818135, 2, 196609, 2818136, 2, 196609, 2818137, 2, 196609, 2818138, 2, 196609, 2818139, 2, 196609, 2818140, 2, 196609, 2818141, 2, 196609, 2818142, 2, 196609, 2818143, 2, 196609, 2818144, 2, 196609, 2818145, 2, 196609, 2818146, 2, 196609, 2818147, 2, 196609, 2818148, 2, 196609, 2818149, 2, 196609, 2818150, 2, 196609, 2818151, 2, 196609, 2818152, 2, 196609, 2818153, 2, 196609, 2818154, 2, 196609, 2818155, 2, 196616, 2818156, 2, 196609, 2818157, 2, 196609, 2818158, 2, 196616, 2818159, 2, 196609, 2818160, 2, 196609, 2818161, 2, 196609, 2818162, 2, 196609, 2818163, 2, 196609, 2818164, 2, 196609, 2818165, 2, 196609, 2818166, 2, 196609, 2818167, 2, 196609, 2818168, 2, 196609, 2818169, 2, 196609, 2818170, 2, 196609, 2818171, 2, 196609, 2818172, 2, 196609, 2818173, 2, 196609, 2818174, 2, 196609, 2818175, 2, 196609, 2818176, 2, 196609, 2818177, 2, 196609, 2818178, 2, 196609, 2818179, 2, 196609, 2818180, 2, 196614, 2818181, 2, 131073, 2818182, 2, 131073, 2818183, 2, 131073, 2818184, 2, 131073, 2818185, 2, 131074, 2818199, 2, 131075, 2818212, 2, 131075, 2818311, 2, 196611, 2818367, 2, 196612, 2818368, 2, 196609, 2818369, 2, 196609, 2818370, 2, 196609, 2818371, 2, 196609, 2818372, 2, 196609, 2818373, 2, 196615, 2818382, 2, 131072, 2818383, 2, 131073, 2818384, 2, 131073, 2818385, 2, 131073, 2818386, 2, 131073, 2818387, 2, 131073, 2818388, 2, 131073, 2818389, 2, 131073, 2818390, 2, 131074, 3080432, 2, 3, 3080436, 2, 3, 3145968, 2, 65539, 3145972, 2, 65539, 3211504, 2, 65539, 3211508, 2, 196612, 3211509, 2, 7, 3211561, 2, 3, 3211566, 2, 3, 3277040, 2, 65539, 3277045, 2, 196612, 3277046, 2, 7, 3277097, 2, 65539, 3277102, 2, 65539, 3342576, 2, 65539, 3342582, 2, 196612, 3342583, 2, 7, 3342633, 2, 65539, 3342638, 2, 65539, 3408112, 2, 196612, 3408113, 2, 7, 3408119, 2, 196612, 3408120, 2, 7, 3408169, 2, 65539, 3408174, 2, 65539, 3473649, 2, 196612, 3473650, 2, 7, 3473656, 2, 196612, 3473657, 2, 7, 3473705, 2, 65539, 3473710, 2, 65539, 3539186, 2, 196612, 3539187, 2, 7, 3539193, 2, 196612, 3539194, 2, 7, 3539241, 2, 65539, 3539246, 2, 65539, 3604723, 2, 196612, 3604724, 2, 7, 3604730, 2, 196612, 3604731, 2, 7, 3604777, 2, 65539, 3604782, 2, 65539, 3670260, 2, 196612, 3670261, 2, 7, 3670267, 2, 196612, 3670268, 2, 7, 3670313, 2, 65539, 3670318, 2, 65539, 3735797, 2, 196612, 3735798, 2, 7, 3735804, 2, 196612, 3735805, 2, 7, 3735849, 2, 65539, 3735854, 2, 65539, 3801334, 2, 196612, 3801335, 2, 7, 3801341, 2, 196612, 3801342, 2, 7, 3801385, 2, 65539, 3801390, 2, 65539, 3866871, 2, 196612, 3866872, 2, 7, 3866878, 2, 196612, 3866879, 2, 7, 3866921, 2, 65539, 3866926, 2, 65539, 3932408, 2, 196612, 3932409, 2, 7, 3932415, 2, 196612, 3932416, 2, 7, 3932457, 2, 65539, 3932462, 2, 65539, 3997945, 2, 196612, 3997946, 2, 7, 3997952, 2, 196612, 3997953, 2, 7, 3997993, 2, 65539, 3997998, 2, 65539, 4063482, 2, 196612, 4063483, 2, 7, 4063489, 2, 196612, 4063490, 2, 7, 4063529, 2, 65539, 4063534, 2, 65539, 4129019, 2, 196612, 4129020, 2, 7, 4129026, 2, 196612, 4129027, 2, 7, 4129065, 2, 65539, 4129070, 2, 65539, 4194556, 2, 196612, 4194557, 2, 7, 4194563, 2, 196612, 4194564, 2, 7, 4194601, 2, 65539, 4194606, 2, 65539, 4260093, 2, 196612, 4260094, 2, 7, 4260100, 2, 196612, 4260101, 2, 7, 4260137, 2, 65539, 4260142, 2, 65539, 4325630, 2, 196612, 4325631, 2, 7, 4325637, 2, 196612, 4325638, 2, 7, 4325673, 2, 65539, 4325678, 2, 65539, 4391167, 2, 196612, 4391168, 2, 7, 4391174, 2, 196612, 4391175, 2, 7, 4391209, 2, 65539, 4391214, 2, 65539, 4456704, 2, 196612, 4456705, 2, 7, 4456711, 2, 196612, 4456712, 2, 7, 4456745, 2, 65539, 4456750, 2, 65539, 4522241, 2, 196612, 4522242, 2, 7, 4522248, 2, 196612, 4522249, 2, 7, 4522281, 2, 65539, 4522286, 2, 65539, 4587778, 2, 196612, 4587779, 2, 7, 4587785, 2, 196612, 4587786, 2, 7, 4587814, 2, 4, 4587815, 2, 196609, 4587816, 2, 196609, 4587817, 2, 196615, 4587822, 2, 65539, 4653315, 2, 196612, 4653316, 2, 7, 4653322, 2, 196612, 4653323, 2, 7, 4653337, 2, 4, 4653338, 2, 196609, 4653339, 2, 196609, 4653340, 2, 196609, 4653341, 2, 196609, 4653342, 2, 196609, 4653343, 2, 196609, 4653344, 2, 196609, 4653345, 2, 196609, 4653346, 2, 196609, 4653347, 2, 196609, 4653348, 2, 196609, 4653349, 2, 196609, 4653350, 2, 196615, 4653358, 2, 65539, 4718852, 2, 196612, 4718853, 2, 7, 4718859, 2, 196612, 4718860, 2, 196609, 4718861, 2, 196609, 4718862, 2, 196609, 4718863, 2, 196609, 4718864, 2, 196609, 4718865, 2, 196609, 4718866, 2, 196609, 4718867, 2, 196609, 4718868, 2, 196609, 4718869, 2, 196609, 4718870, 2, 196609, 4718871, 2, 196609, 4718872, 2, 196609, 4718873, 2, 196615, 4718894, 2, 65539, 4784389, 2, 196612, 4784390, 2, 7, 4784430, 2, 65539, 4849926, 2, 196612, 4849927, 2, 7, 4849966, 2, 65539, 4915463, 2, 196612, 4915464, 2, 7, 4915502, 2, 65539, 4981000, 2, 196612, 4981001, 2, 7, 4981038, 2, 65539, 5046537, 2, 196612, 5046538, 2, 7, 5046574, 2, 65539, 5112074, 2, 196612, 5112075, 2, 7, 5112110, 2, 65539, 5177611, 2, 196612, 5177612, 2, 7, 5177646, 2, 65539, 5243148, 2, 196612, 5243149, 2, 7, 5243179, 2, 196608, 5243180, 2, 196610, 5243182, 2, 65539, 5308685, 2, 196612, 5308686, 2, 7, 5308718, 2, 65539, 5374222, 2, 196612, 5374223, 2, 7, 5374254, 2, 65539, 5439759, 2, 196612, 5439760, 2, 7, 5439790, 2, 65539, 5505296, 2, 196612, 5505297, 2, 196609, 5505298, 2, 196609, 5505299, 2, 196609, 5505300, 2, 196609, 5505301, 2, 196609, 5505302, 2, 196609, 5505303, 2, 196609, 5505304, 2, 196609, 5505305, 2, 196609, 5505306, 2, 196609, 5505307, 2, 196609, 5505308, 2, 196609, 5505309, 2, 196609, 5505310, 2, 6, 5505311, 2, 1, 5505312, 2, 1, 5505313, 2, 1, 5505314, 2, 5, 5505315, 2, 196609, 5505316, 2, 196609, 5505317, 2, 196609, 5505318, 2, 196609, 5505319, 2, 196609, 5505320, 2, 196609, 5505321, 2, 196609, 5505322, 2, 196609, 5505323, 2, 196609, 5505324, 2, 6, 5505325, 2, 5, 5505326, 2, 196615, 5570675, 2, 196608, 5570676, 2, 196610, 5570846, 2, 131072, 5570847, 2, 131073, 5570848, 2, 131073, 5570849, 2, 131073, 5570850, 2, 131074, 5570860, 2, 131072, 5570861, 2, 131074 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 308.275, 678.195 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="pickups" parent="." instance=ExtResource( 6 )]

[node name="enemies_moving" type="Node2D" parent="."]

[node name="tucas_enemy_moving" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 691.22, 678.93 )

[node name="tucas_enemy_moving2" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 327.089, 677.229 )

[node name="tucas_enemy_moving3" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 1352.47, 677.774 )

[node name="tucas_enemy_moving4" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 1798.89, 676.506 )

[node name="tucas_enemy_moving5" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 2024.22, 569.975 )

[node name="tucas_enemy_moving6" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 1843.67, 322.933 )

[node name="tucas_enemy_moving7" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 3095.03, 660.127 )

[node name="tucas_enemy_moving8" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 2683.32, 626.606 )

[node name="tucas_enemy_moving9" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 2789.71, 626.002 )

[node name="tucas_enemy_moving10" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 4960.5, 659.117 )

[node name="tucas_enemy_moving11" parent="enemies_moving" instance=ExtResource( 4 )]
position = Vector2( 4759.58, 320.133 )

[node name="enemies_high" type="Node2D" parent="."]

[node name="ascenso" parent="." instance=ExtResource( 10 )]
position = Vector2( -1915.29, -1400.26 )

[node name="cochVuelta" parent="." instance=ExtResource( 11 )]
position = Vector2( -1296.92, -1995.76 )

[node name="restPos" type="Position2D" parent="."]
position = Vector2( -1586.75, 636.396 )

[node name="deathPlatforms" type="Area2D" parent="."]
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathPlatforms"]
position = Vector2( 2516.39, 755.277 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="deathPlatforms"]
position = Vector2( 3559.61, 725.038 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="deathPlatforms"]
position = Vector2( 1126.5, 735.936 )
shape = SubResource( 3 )

[node name="winArea" type="Area2D" parent="."]
position = Vector2( 5725.98, 637.068 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="winArea"]
position = Vector2( -0.707031, -5.65686 )
shape = SubResource( 4 )

[node name="jumpPowerUp" parent="." instance=ExtResource( 3 )]
position = Vector2( 2087.39, 479.514 )

[node name="NewSuperMarioBros2-World1-1" type="Sprite" parent="."]
visible = false
position = Vector2( 2905.89, 630.67 )
texture = ExtResource( 17 )

[node name="backgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="fumada" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="got48" from="player_tile" to="." method="_on_player_tile_got48"]
[connection signal="life_changed" from="player_tile" to="HUD2" method="_on_player_tile_life_changed"]
[connection signal="finished" from="player_tile/death" to="." method="_on_death_finished"]
[connection signal="area_entered" from="deathPlatforms" to="deathPlatforms" method="_on_deathPlatforms_area_entered"]
[connection signal="body_entered" from="deathPlatforms" to="deathPlatforms" method="_on_deathPlatforms_body_entered"]
[connection signal="body_entered" from="winArea" to="." method="_on_winArea_body_entered"]

[editable path="HUD2"]
[editable path="player_tile"]
